--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.android.shunshine.app.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,20 +19,20 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DetailedActivity"
+            android:name="com.example.android.shunshine.app.DetailedActivity"
             android:label="@string/title_activity_detailed"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName="com.example.android.shunshine.app.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="app.com.example.iblesa.sunshine.MainActivity" />
+                android:value="com.example.android.shunshine.app.MainActivity" />
         </activity>
         <activity
-            android:name=".SettingsActivity"
+            android:name="com.example.android.shunshine.app.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName="com.example.android.shunshine.app.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="app.com.example.iblesa.sunshine.MainActivity" />
+                android:value="com.example.android.shunshine.app.MainActivity" />
         </activity>
     </application>
 
