--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.android.shunshine.app.MainActivity"
+            android:name="com.example.android.sunshine.app.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,18 +21,18 @@
         <activity
             android:name="com.example.android.shunshine.app.DetailedActivity"
             android:label="@string/title_activity_detailed"
-            android:parentActivityName="com.example.android.shunshine.app.MainActivity" >
+            android:parentActivityName="com.example.android.sunshine.app.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.android.shunshine.app.MainActivity" />
+                android:value="com.example.android.sunshine.app.MainActivity" />
         </activity>
         <activity
-            android:name="com.example.android.shunshine.app.SettingsActivity"
+            android:name="com.example.android.sunshine.app.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName="com.example.android.shunshine.app.MainActivity" >
+            android:parentActivityName="com.example.android.sunshine.app.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.android.shunshine.app.MainActivity" />
+                android:value="com.example.android.sunshine.app.MainActivity" />
         </activity>
     </application>
 
