--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.facebook.stetho:stetho:1.0.1'
+    compile 'com.facebook.stetho:stetho-okhttp:1.0.1'
 }
